# XUQ-TimeSeriesForecast

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  test.py  test_notebook.ipynb
.ipynb_checkpoints/: test-checkpoint.py
common/: timeseries.py  utils.py
entsoe-e/: download.env.sh  entsoe_downloader.py
examples/: lstm_synthetic_time_probabilistic.ipynb  nhits_airpassenger.py  nhits_synthetic_time.py  probabilistic_forecasts.ipynb  signal_decomposition.ipynb  sine_cosine.py  time_interpret.py
examples/.ipynb_checkpoints/: lstm_synthetic_time_probabilistic-checkpoint.ipynb
experiment_templates/: exogenous_sinus_peak_spike.py  exogenous_sinus_peak_spike_amplitude.py  sinus_peak_noise.py  sinus_peak_noise_valley_noise.py  sinus_peak_spike_valley_noise.py
experimental_runs/entsoe_first/: entsoe_first.py
experimental_runs/entsoe_first/results_csv/: df_test.csv  predictions.csv
experimental_runs/sinus_peak_spike_nhits_exogenous/: sinus_peak_spike_nhits_exogenous.py
experiments/entsoe_first/: entsoe_first.py
experiments/sinus_peak_noise_lstm/: sinus_peak_noise_lstm.py
experiments/sinus_peak_noise_lstm_multivariate/: sinus_peak_noise_lstm_multivariate.py
experiments/sinus_peak_noise_nhits/: sinus_peak_noise_nhits.py
experiments/sinus_peak_noise_nhits_multivariate/: sinus_peak_noise_nhits_multivariate.py
experiments/sinus_peak_noise_patch_tst/: sinus_peak_noise_patch_tst.py
experiments/sinus_peak_noise_valley_noise_conditional_lstm/: sinus_peak_noise_valley_noise_conditional_lstm.py
experiments/sinus_peak_noise_valley_noise_conditional_nhits/: sinus_peak_noise_valley_noise_conditional_nhits.py
experiments/sinus_peak_spike_amplitude_nhits_exogenous/: sinus_peak_spike_amplitude_nhits_exogenous.py
experiments/sinus_peak_spike_nhits_exogenous/: sinus_peak_spike_nhits_exogenous.py
experiments/sinus_peak_spike_nhits_multivariate/: sinus_peak_spike_nhits_multivariate.py
nf_ti_adapter/: base.py  lstm.py  nhits.py  patch_tst.py
notebooks/: create_plots_thesis.ipynb  entsoe_explore.ipynb  plot_experiments.ipynb  show_attributions.ipynb
scripts/: plot_experiments.py  plot_experiments_entsoe.py  plot_experiments_exogenous_sinus_peak_spike.py  plot_experiments_sinus_peak_noise.py  plot_experiments_sinus_peak_noise_valley_noise.py  plot_experiments_sinus_peak_spike_valley_noise.py
(+16989 files in other folders)
