[tool.poetry]
description = "All the work related to my Master's Thesison explainability of uncertainty in time series forecasting."
authors = ["Yannick Funk <yannick.funk2@kit.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.8.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
