[tool.poetry]
description = "All the work related to my Master's Thesis on explainability of uncertainty in time series forecasting."
authors = ["Yannick Funk <yannick.funk2@kit.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
torch = {version = "^2.3.0+cu118", source = "pytorch-cuda"}
neuralforecast = "^1.7.1"
pre-commit = "^3.7.0"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
