[tool.poetry]
description = "All the work related to my Master's Thesis on explainability of uncertainty in time series forecasting."
authors = ["Yannick Funk <yannick.funk2@kit.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.26.4"
matplotlib = "3.5.3"
torch = {version = "^2.3.0+cu118", source = "pytorch-cuda"}
neuralforecast = "^1.7.1"
pre-commit = "^3.7.0"
synthetictime = {git = "https://github.com/kalebphipps/SyntheticTime.git"}
time-interpret = "^0.3.0"
lightning = "^2.2.4"
scikit-learn = "^1.5.0"
scipy = "^1.13.1"
tikzplotlib = "^0.10.1"
webcolors = "1.13"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
tensorboard = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
